were disabled buttons borders on click, were move link texts from css to the tag,on gulp file add all tasks, fix broken UI on width is 990 - 1200, were fix align footer on small screens

--- a/1. HTML-CSS/1.4. BEM/sass/blocks/_banner.scss
+++ b/1. HTML-CSS/1.4. BEM/sass/blocks/_banner.scss
@@ -55,7 +55,7 @@
     }
 
     &-main {
-      color: $primaryColor;
+      color: $primaryColorLight;
       font-family: $primaryFont;
       font-size: 31px;
       letter-spacing: 2.4px;
@@ -68,8 +68,8 @@
     }
 
     &-line {
-      background-color: $primaryColor;
-      border-top: 1px solid $primaryColor;
+      background-color: $primaryColorLight;
+      border-top: 1px solid $primaryColorLight;
       height: 1px;
       width: 100%;
       max-width: 250px;
@@ -80,7 +80,7 @@
   }
 
   &__description {
-    color: $primaryColor;
+    color: $primaryColorLight;
     font-family: $primaryFont;
     font-size: 31px;
     letter-spacing: 2.4px;
