--- a/1. HTML-CSS/1.4. BEM/sass/blocks/rows/_row-1.scss
+++ b/1. HTML-CSS/1.4. BEM/sass/blocks/rows/_row-1.scss
@@ -4,7 +4,7 @@
 }
 
 .row-1 {
-  background: $primaryColor;
+  background: $primaryColorLight;
   height: 277px;
   width: 100%;
   @include respond-to($lg, $md, $sm, $es) {
@@ -77,7 +77,7 @@
     }
 
     &--title {
-      color: #000;
+      color: black;
       font-family: $primaryFont;
       font-size: 21px;
       letter-spacing: 0.8px;
@@ -88,7 +88,7 @@
     }
 
     &--description {
-      color: #666666;
+      color: $primaryColorDark;
       font-family: $secondaryFont;
       font-size: 14px;
       line-height: 24px;
@@ -96,11 +96,8 @@
 
     &--link {
       text-decoration: none;
-    }
-
-    &--link:after {
+      outline: none;
       color: $secondaryColor;
-      content: "=> more";
     }
   }
 }
